Fix "active" column width on mobile

--- a/src/components/Spells/TableRow/TableRow.module.scss
+++ b/src/components/Spells/TableRow/TableRow.module.scss
@@ -18,6 +18,7 @@
 .checkboxCell {
   padding: 0px;
   text-align: center;
+  width: 70px;
 }
 
 .detailsMobileCell {
